fixed textarea overflowing

--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ html {
     background: transparent;
     border: 1px solid rgba(90, 90, 90, 0.355);
     border-radius: 4px;
+
+    width: 80%;
 }
 
 /* Body styles */
